--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -31,3 +31,6 @@ spring.liquibase.default-schema=testdb
 spring.jpa.properties.hibernate.default_schema=testdb
 spring.liquibase.driver-class-name=org.h2.Driver
 spring.liquibase.liquibase-schema=testdb
+
+#eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
