--- a/customer-service/pom.xml
+++ b/customer-service/pom.xml
@@ -100,6 +100,25 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
 		</dependency>
+		<dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-security</artifactId>
+	    </dependency>
+	    <dependency>
+	        <groupId>io.jsonwebtoken</groupId>
+	        <artifactId>jjwt</artifactId>
+	        <version>0.9.1</version>
+	    </dependency>
+	    <dependency>
+	    	<groupId>io.jsonwebtoken</groupId>
+	    	<artifactId>jjwt-impl</artifactId>
+	    	<version>0.12.6</version>
+	  	</dependency>
+	  	<dependency>
+	    	<groupId>io.jsonwebtoken</groupId>
+	    	<artifactId>jjwt-jackson</artifactId>
+	    	<version>0.12.6</version>
+	  	</dependency>
 		
 	</dependencies>
 	<dependencyManagement>
