--- a/customer-service/src/main/resources/db/changelog/changelog-1.yaml
+++ b/customer-service/src/main/resources/db/changelog/changelog-1.yaml
@@ -33,19 +33,8 @@ databaseChangeLog:
                  type: varchar(100)
                  constraints:
                    nullable: false
- - changeSet:
-     id: 2
-     author: Mila
-     changes:
-       - insert:
-           tableName: customers
-           columns:
              - column:
-                 name: first_name
-                 value: "Peter"
-             - column:
-                 name: last_name
-                 value: "Smith"
-             - column:
-                 name: email
-                 value: "peter@gmail.com"
+                 name: password
+                 type: varchar(250)
+                 constraints:
+                   nullable: false
