--- a/customer-service/src/main/resources/db/changelog/changelog-1.yaml
+++ b/customer-service/src/main/resources/db/changelog/changelog-1.yaml
@@ -38,3 +38,8 @@ databaseChangeLog:
                  type: varchar(250)
                  constraints:
                    nullable: false
+             - column:
+                 name: role
+                 type: varchar(100)
+                 constraints:
+                   nullable: false
