--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=config-server
+server.port=8888
+
+spring.cloud.config.server.git.uri=https://github.com/milamilovic/InventoryCloudManagementSystem
+spring.cloud.config.server.git.searchPaths=config
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
