--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -45,14 +45,6 @@
 		</dependency>
 		<!--<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-gateway-mvc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-loadbalancer</artifactId>
 		</dependency>-->
 		<dependency>
@@ -67,6 +59,25 @@
 		    <groupId>org.springframework.cloud</groupId>
 		    <artifactId>spring-cloud-starter-bootstrap</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-circuitbreaker-reactor-resilience4j</artifactId>
+		</dependency>
+		<dependency>
+	        <groupId>io.github.resilience4j</groupId>
+	        <artifactId>resilience4j-reactor</artifactId>
+	        <version>2.0.0</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>io.github.resilience4j</groupId>
+	        <artifactId>resilience4j-spring-boot2</artifactId>
+	        <version>2.0.0</version>
+	    </dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
