added endpotints with business logic to all services

--- a/inventory-service/src/main/resources/db/changelog/changelog-1.yaml
+++ b/inventory-service/src/main/resources/db/changelog/changelog-1.yaml
@@ -38,4 +38,17 @@ databaseChangeLog:
                  value: 1
              - column:
                  name: quantity
+                 value: 2
+ - changeSet:
+     id: 3
+     author: Mila
+     changes:
+       - insert:
+           tableName: inventory
+           columns:
+             - column:
+                 name: product_id
+                 value: 2
+             - column:
+                 name: quantity
                  value: 1
