--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -138,6 +138,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.retry</groupId>
+		    <artifactId>spring-retry</artifactId>
+		    <version>2.0.11</version>
+		</dependency>
+		<dependency>
+		    <groupId>io.github.resilience4j</groupId>
+		    <artifactId>resilience4j-bulkhead</artifactId>
+		    <version>1.7.0</version>
+		</dependency>
+
 		
 	</dependencies>
 	<dependencyManagement>
