--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.cloud.config.server.git.uri=https://github.com/milamilovic/InventoryCloud
 spring.cloud.config.server.git.searchPaths=config
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
