--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -143,11 +143,11 @@
 		    <artifactId>spring-retry</artifactId>
 		    <version>2.0.11</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 		    <groupId>io.github.resilience4j</groupId>
 		    <artifactId>resilience4j-bulkhead</artifactId>
 		    <version>1.7.0</version>
-		</dependency>
+		</dependency>-->
 
 		
 	</dependencies>
