--- a/config/customer-service-dev.properties
+++ b/config/customer-service-dev.properties
@@ -22,7 +22,7 @@ spring.jpa.defer-datasource-initialization=false
 spring.liquibase.enabled=true
 logging.level.liquibase=INFO
 spring.jpa.hibernate.ddl-auto=update
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
+liquibase.change-log=classpath:/resources/db/changelog/db.changelog-master.yaml
 spring.liquibase.user=sa
 spring.liquibase.password=
 spring.liquibase.default-schema=testdb
