--- a/config/customer-service-dev.properties
+++ b/config/customer-service-dev.properties
@@ -31,7 +31,7 @@ spring.liquibase.driver-class-name=org.h2.Driver
 spring.liquibase.liquibase-schema=testdb
 
 #eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
 #security
