customer connects to config and eureka!!!!!!!!!!

--- a/customer-service/Dockerfile
+++ b/customer-service/Dockerfile
@@ -8,8 +8,8 @@ WORKDIR /app
 COPY target/customer-service-0.0.1-SNAPSHOT.jar /app/customer-service.jar
 
 #Copy the database files
-COPY src/main/resources/db/changelog/db.changelog-master.yaml /app/resources/db/changelog/db.changelog-master.yaml
-COPY src/main/resources/db/changelog/changelog-1.yaml /app/resources/db/changelog/changelog-1.yaml
+COPY src/main/resources/db/changelog/db.changelog-master.yaml /app/db/changelog/db.changelog-master.yaml
+COPY src/main/resources/db/changelog/changelog-1.yaml /app/db/changelog/changelog-1.yaml
 
 # Expose the port the app runs on
 EXPOSE 8080
