--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,12 @@ services:
       - order-service
       - payment-service
       - product-service
+    restart: always
+    environment:
+      eureka.client.serviceUrl.defaultZone: http://eureka-server:8761/eureka
+      SPRING_APPLICATION_JSON: '{"eureka_server":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}}}'
+    command: 
+      - "--eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka"
       
   customer-service:
     build: ./customer-service
@@ -68,12 +74,14 @@ services:
     links:
       - eureka-server
       - config-server
+    restart: always
     environment:
       SPRING_PROFILES_ACTIVE: docker
       eureka.client.serviceUrl.defaultZone: http://eureka-server:8761/eureka
-      SPRING_APPLICATION_JSON: '{"eureka_server":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}}}'
+      spring.cloud.config.uri: http://config-server:8888
+      SPRING_APPLICATION_JSON: '{"eureka_server":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}},"config-server":{"client":{"serviceUrl":{"defaultZone":"http://config-server:8888"}}}}'
     command: 
-      - "--eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka"
+      - "--eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka --spring.cloud.config.uri=http://config-server:8888"
       
   order-service:
     build: ./order-service
@@ -83,12 +91,14 @@ services:
     links:
       - eureka-server
       - config-server
+    restart: always
     environment:
       SPRING_PROFILES_ACTIVE: docker
       eureka.client.serviceUrl.defaultZone: http://eureka-server:8761/eureka
-      SPRING_APPLICATION_JSON: '{"eureka_server":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}}}'
+      spring.cloud.config.uri: http://config-server:8888
+      SPRING_APPLICATION_JSON: '{"eureka_server":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}},"config-server":{"client":{"serviceUrl":{"defaultZone":"http://config-server:8888"}}}}'
     command: 
-      - "--eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka"
+      - "--eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka --spring.cloud.config.uri=http://config-server:8888"
       
   payment-service:
     build: ./payment-service
@@ -98,12 +108,14 @@ services:
     links:
       - eureka-server
       - config-server
+    restart: always
     environment:
       SPRING_PROFILES_ACTIVE: docker
       eureka.client.serviceUrl.defaultZone: http://eureka-server:8761/eureka
-      SPRING_APPLICATION_JSON: '{"eureka_server":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}}}'
+      spring.cloud.config.uri: http://config-server:8888
+      SPRING_APPLICATION_JSON: '{"eureka_server":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}},"config-server":{"client":{"serviceUrl":{"defaultZone":"http://config-server:8888"}}}}'
     command: 
-      - "--eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka"
+      - "--eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka --spring.cloud.config.uri=http://config-server:8888"
       
   product-service:
     build: ./product-service
@@ -113,13 +125,15 @@ services:
     links:
       - eureka-server
       - config-server
+    restart: always
     environment:
       SPRING_PROFILES_ACTIVE: docker
       eureka.client.serviceUrl.defaultZone: http://eureka-server:8761/eureka
-      SPRING_APPLICATION_JSON: '{"eureka_server":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}}}'
+      spring.cloud.config.uri: http://config-server:8888
+      SPRING_APPLICATION_JSON: '{"eureka_server":{"client":{"serviceUrl":{"defaultZone":"http://eureka-server:8761/eureka"}}},"config-server":{"client":{"serviceUrl":{"defaultZone":"http://config-server:8888"}}}}'
     command: 
-      - "--eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka"
-
+      - "--eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka --spring.cloud.config.uri=http://config-server:8888"
+    
   # Elasticsearch service
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.6.1
