logstash communicates with elasticsearch

--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -1,15 +1,12 @@
 spring.application.name=customer-service
 server.port=8080
 
+#config and eureka
 spring.cloud.config.enabled=true
-
 spring.cloud.config.uri=http://host.docker.internal:8888
 spring.cloud.config.discovery.enabled=true
-
 spring.cloud.config.name=customer-service
-
 spring.cloud.config.profile=dev
-
 eureka.instance.prefer-ip-address=true
 
 #security
@@ -19,3 +16,9 @@ security.jwt.expiration-time=86400000
 #db and liquibase
 spring.liquibase.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS testdb;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS testdb;DB_CLOSE_ON_EXIT=FALSE
+
+#monitoring and logging
+management.endpoints.web.exposure.include=health,info,prometheus
+management.prometheus.metrics.export.enabled=true
+logging.logstash.host=logstash
+logging.logstash.port=5044
