--- a/logstash/config/logstash-sample.conf
+++ b/logstash/config/logstash-sample.conf
@@ -1,17 +1,22 @@
-# Sample Logstash configuration for creating a simple
-# Beats -> Logstash -> Elasticsearch pipeline.
-
 input {
-  beats {
+  tcp {
     port => 5044
+    codec => "json_lines"
   }
 }
 
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
-    index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
-    #user => "elastic"
-    #password => "changeme"
+	user => "elastic"
+    password => "8s*GtRRLmX_XP0htMS7s"
+    ilm_enabled => false
+	ssl_certificate_verification => false
   }
+  logstash {
+	hosts => ["http://localhost:5044"]
+  }
+  stdout {
+      codec = rubydebug
+   }
 }
