--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,15 +1,12 @@
 spring.application.name=product-service
 server.port=8084
 
+#config and eureka
 spring.cloud.config.enabled=true
-
 spring.cloud.config.uri=http://host.docker.internal:8888
 spring.cloud.config.discovery.enabled=true
-
 spring.cloud.config.name=product-service
-
 spring.cloud.config.profile=dev
-
 eureka.instance.prefer-ip-address=true
 
 #security
