--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -154,15 +154,23 @@ services:
       - LS_JAVA_OPTS=-Xmx256m -Xms256m
     ports:
       - "5044:5044"
+    links:
+      - elasticsearch
     volumes:
       - ./logstash/config/logstash-saml.conf:/usr/share/logstash/pipeline/logstash-samle.conf
+      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
 
   # Kibana service
   kibana:
     image: docker.elastic.co/kibana/kibana:8.6.1
     container_name: kibana
+    links:
+      - elasticsearch
+      - logstash
     environment:
       - ELASTICSEARCH_URL=http://elasticsearch:9200
+      #- ELASTICSEARCH_USERNAME=kibana
+      - ELASTICSEARCH_SERVICEACCOUNTTOKEN=AAEAAWVsYXN0aWMva2liYW5hL3Rva2VuMTprT1F4dUJyaFRUcUVDcG9LempoZUZ3
     ports:
       - "5601:5601"
 
@@ -174,6 +182,15 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=admin  # Set the Grafana admin password
     ports:
       - "3000:3000"
+      
+  # Prometheus
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
 
 
 volumes:
