customer service connects to logback

--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -20,5 +20,5 @@ spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF
 #monitoring and logging
 management.endpoints.web.exposure.include=health,info,prometheus
 management.prometheus.metrics.export.enabled=true
-logging.logstash.host=logstash
-logging.logstash.port=5044
+#logging.logstash.host=http://logstash
+#logging.logstash.port=5044
