--- a/logstash/config/logstash-sample.conf
+++ b/logstash/config/logstash-sample.conf
@@ -1,22 +1,24 @@
 input {
-  tcp {
-    port => 5044
-    codec => "json_lines"
-  }
+	beats {
+		port => 5000
+	}
+
+	tcp {
+		port => 5044
+		codec => json
+	}
 }
 
 output {
   elasticsearch {
-    hosts => ["http://localhost:9200"]
+    hosts => ["http://elasticsearch:9200"]
 	user => "elastic"
-    password => "8s*GtRRLmX_XP0htMS7s"
+    password => "gtVZA81fjDyXsyVY3rVU"
     ilm_enabled => false
 	ssl_certificate_verification => false
-  }
-  logstash {
-	hosts => ["http://localhost:5044"]
+    index => "microservices-logs-%{+YYYY.MM.dd}"
   }
   stdout {
-      codec = rubydebug
+    codec => rubydebug
    }
 }
