--- a/logstash/config/logstash.yml
+++ b/logstash/config/logstash.yml
@@ -1,3 +1,3 @@
 xpack.monitoring.elasticsearch.hosts: [ "http://elasticsearch:9200" ]
 xpack.monitoring.elasticsearch.username: elastic
-xpack.monitoring.elasticsearch.password: 8s*GtRRLmX_XP0htMS7s
+xpack.monitoring.elasticsearch.password: gtVZA81fjDyXsyVY3rVU
