--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -16,3 +16,7 @@ security.jwt.expiration-time=86400000
 #db and liquibase
 spring.liquibase.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS testdb;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS testdb;DB_CLOSE_ON_EXIT=FALSE
+
+#monitoring and logging
+management.endpoints.web.exposure.include=health,info,prometheus
+management.prometheus.metrics.export.enabled=true
