prometheus connects to customer service

--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -18,7 +18,15 @@ spring.liquibase.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF 
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS testdb;DB_CLOSE_ON_EXIT=FALSE
 
 #monitoring and logging
-management.endpoints.web.exposure.include=health,info,prometheus
-management.prometheus.metrics.export.enabled=true
+#management.endpoints.access.default=UNRESTRICTED
+management.endpoints.web.exposure.include=*
+management.prometheus.metrics.enabled=true
+#management.server.port=8087
+#management.security.enabled=false
+#management.endpoint.health.access=UNRESTRICTED
+#management.endpoint.health.show-details=always
+#management.endpoint.metrics.enabled=true
 #logging.logstash.host=http://logstash
 #logging.logstash.port=5044
+
+logging.level.org.springframework.web: DEBUG
