--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -20,3 +20,4 @@ spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF
 #monitoring and logging
 management.endpoints.web.exposure.include=health,info,prometheus
 management.prometheus.metrics.export.enabled=true
+management.server.port=8087
