--- a/customer-service/pom.xml
+++ b/customer-service/pom.xml
@@ -124,6 +124,12 @@
 		    <groupId>io.micrometer</groupId>
 		    <artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-rsa</artifactId>
+		    <version>1.1.5</version>
+		</dependency>
+
 
 		
 	</dependencies>
