--- a/logstash/config/logstash-sample.conf
+++ b/logstash/config/logstash-sample.conf
@@ -13,7 +13,7 @@ output {
   elasticsearch {
     hosts => ["http://elasticsearch:9200"]
 	user => "elastic"
-    password => "gtVZA81fjDyXsyVY3rVU"
+    password => "xRzj_QpH1yB2qONe8Hu="
     ilm_enabled => false
 	ssl_certificate_verification => false
     index => "microservices-logs-%{+YYYY.MM.dd}"
